--- a/pom.xml
+++ b/pom.xml
@@ -435,7 +435,7 @@
 			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
-				<version>16.0.1</version>
+				<version>30.1.1-jre</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
